--- a/HM Land Registry Data.ipynb
+++ b/HM Land Registry Data.ipynb
@@ -40,200 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(23674, 16)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8355F008-FE01-55C5-E053-6B04A8C0D090</td>\n",
-       "      <td>770000</td>\n",
-       "      <td>2019-02-01</td>\n",
-       "      <td>AL1 1DU</td>\n",
-       "      <td>D</td>\n",
-       "      <td>N</td>\n",
-       "      <td>F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>49</td>\n",
-       "      <td>NAPSBURY LANE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>HERTFORDSHIRE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>http://landregistry.data.gov.uk/data/ppi/trans...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8355F008-FE0A-55C5-E053-6B04A8C0D090</td>\n",
-       "      <td>535000</td>\n",
-       "      <td>2019-02-08</td>\n",
-       "      <td>AL1 1NE</td>\n",
-       "      <td>T</td>\n",
-       "      <td>N</td>\n",
-       "      <td>F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
-       "      <td>PAGEANT ROAD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>HERTFORDSHIRE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>http://landregistry.data.gov.uk/data/ppi/trans...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8355F008-FEF1-55C5-E053-6B04A8C0D090</td>\n",
-       "      <td>822000</td>\n",
-       "      <td>2019-02-15</td>\n",
-       "      <td>AL1 1SJ</td>\n",
-       "      <td>S</td>\n",
-       "      <td>N</td>\n",
-       "      <td>F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11</td>\n",
-       "      <td>RAMSBURY ROAD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>HERTFORDSHIRE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>http://landregistry.data.gov.uk/data/ppi/trans...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8355F008-FF0E-55C5-E053-6B04A8C0D090</td>\n",
-       "      <td>425000</td>\n",
-       "      <td>2019-02-14</td>\n",
-       "      <td>AL1 2LT</td>\n",
-       "      <td>T</td>\n",
-       "      <td>N</td>\n",
-       "      <td>F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>48</td>\n",
-       "      <td>HOLYROOD CRESCENT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>HERTFORDSHIRE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>http://landregistry.data.gov.uk/data/ppi/trans...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8355F009-003B-55C5-E053-6B04A8C0D090</td>\n",
-       "      <td>280000</td>\n",
-       "      <td>2019-02-22</td>\n",
-       "      <td>AL1 3PF</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>L</td>\n",
-       "      <td>10</td>\n",
-       "      <td>THIRLESTANE</td>\n",
-       "      <td>LEMSFORD ROAD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>ST ALBANS</td>\n",
-       "      <td>HERTFORDSHIRE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>http://landregistry.data.gov.uk/data/ppi/trans...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     0       1           2        3  4  5  6   \\\n",
-       "0  8355F008-FE01-55C5-E053-6B04A8C0D090  770000  2019-02-01  AL1 1DU  D  N  F   \n",
-       "1  8355F008-FE0A-55C5-E053-6B04A8C0D090  535000  2019-02-08  AL1 1NE  T  N  F   \n",
-       "2  8355F008-FEF1-55C5-E053-6B04A8C0D090  822000  2019-02-15  AL1 1SJ  S  N  F   \n",
-       "3  8355F008-FF0E-55C5-E053-6B04A8C0D090  425000  2019-02-14  AL1 2LT  T  N  F   \n",
-       "4  8355F009-003B-55C5-E053-6B04A8C0D090  280000  2019-02-22  AL1 3PF  F  N  L   \n",
-       "\n",
-       "    7            8                  9    10         11         12  \\\n",
-       "0  NaN           49      NAPSBURY LANE  NaN  ST ALBANS  ST ALBANS   \n",
-       "1  NaN            4       PAGEANT ROAD  NaN  ST ALBANS  ST ALBANS   \n",
-       "2  NaN           11      RAMSBURY ROAD  NaN  ST ALBANS  ST ALBANS   \n",
-       "3  NaN           48  HOLYROOD CRESCENT  NaN  ST ALBANS  ST ALBANS   \n",
-       "4   10  THIRLESTANE      LEMSFORD ROAD  NaN  ST ALBANS  ST ALBANS   \n",
-       "\n",
-       "              13 14                                                 15  \n",
-       "0  HERTFORDSHIRE  A  http://landregistry.data.gov.uk/data/ppi/trans...  \n",
-       "1  HERTFORDSHIRE  A  http://landregistry.data.gov.uk/data/ppi/trans...  \n",
-       "2  HERTFORDSHIRE  A  http://landregistry.data.gov.uk/data/ppi/trans...  \n",
-       "3  HERTFORDSHIRE  A  http://landregistry.data.gov.uk/data/ppi/trans...  \n",
-       "4  HERTFORDSHIRE  A  http://landregistry.data.gov.uk/data/ppi/trans...  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "min_date = \"1+February+2019\"\n",
-    "df = pd.read_csv(\"http://landregistry.data.gov.uk/app/ppd/ppd_data.csv?et%5B%5D=lrcommon%3Afreehold&et%5B%5D=lrcommon%3Aleasehold&header=true&limit=all&min_date=1+February+2019&nb%5B%5D=true&nb%5B%5D=false&ptype%5B%5D=lrcommon%3Adetached&ptype%5B%5D=lrcommon%3Asemi-detached&ptype%5B%5D=lrcommon%3Aterraced&ptype%5B%5D=lrcommon%3Aflat-maisonette&ptype%5B%5D=lrcommon%3AotherPropertyType&tc%5B%5D=ppd%3AstandardPricePaidTransaction&tc%5B%5D=ppd%3AadditionalPricePaidTransaction\",  header=None)\n"
+    "csv_link = \"http://landregistry.data.gov.uk/app/ppd/ppd_data.csv?et%5B%5D=lrcommon%3Afreehold&et%5B%5D=lrcommon%3Aleasehold&header=true&limit=all&min_date={}&nb%5B%5D=true&nb%5B%5D=false&ptype%5B%5D=lrcommon%3Adetached&ptype%5B%5D=lrcommon%3Asemi-detached&ptype%5B%5D=lrcommon%3Aterraced&ptype%5B%5D=lrcommon%3Aflat-maisonette&ptype%5B%5D=lrcommon%3AotherPropertyType&tc%5B%5D=ppd%3AstandardPricePaidTransaction&tc%5B%5D=ppd%3AadditionalPricePaidTransaction\".format(min_date)\n",
+    "df = pd.read_csv(csv_link, header=None)\n",
+    "#df = pd.read_csv(\"http://landregistry.data.gov.uk/app/ppd/ppd_data.csv?et%5B%5D=lrcommon%3Afreehold&et%5B%5D=lrcommon%3Aleasehold&header=true&limit=all&min_date=1+February+2019&nb%5B%5D=true&nb%5B%5D=false&ptype%5B%5D=lrcommon%3Adetached&ptype%5B%5D=lrcommon%3Asemi-detached&ptype%5B%5D=lrcommon%3Aterraced&ptype%5B%5D=lrcommon%3Aflat-maisonette&ptype%5B%5D=lrcommon%3AotherPropertyType&tc%5B%5D=ppd%3AstandardPricePaidTransaction&tc%5B%5D=ppd%3AadditionalPricePaidTransaction\",  header=None)\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(23674, 16)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -403,7 +225,7 @@
        "4  http://landregistry.data.gov.uk/data/ppi/trans...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +234,10 @@
     "headers = ['unique_id','price_paid','deed_date','postcode','property_type','new_build','estate_type','saon','paon','street','locality','town','district','county','transaction_category','linked_data_uri']\n",
     "#df.rename(columns=headers)\n",
     "df.columns = headers\n",
-    "print(df.shape)\n",
+    "\n",
+    "#remove 'additional' transaction category\n",
+    "df = df[df['transaction_category']==A]\n",
+    "\n",
     "df.head()"
    ]
   },
