--- a/Project Report.ipynb
+++ b/Project Report.ipynb
@@ -67,13 +67,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "London house price data is published by the HM Land Registry on http://publicdata.landregistry.gov.uk/ each month. It provides average house prices for all counties in the UK. \n",
+    "1 London house price data is published by the HM Land Registry on http://publicdata.landregistry.gov.uk/ each month. It provides average house prices for all counties in the UK. \n",
     "\n",
-    "I will need to do some data wrangling before using the Geopy library to pull latitude and longitude data for each London Borough. \n",
-    "\n",
-    "A better dataset would contain unsummarised data including individual house sales and location data. but I was unable to source this.\n",
-    "\n",
-    "Secondly, I will need venue information. For each London Borough, I will collect venue information using the Foursquare API. More specifically, I will be capturing venue categorisation, as I will be using it as a feature set. For example, how many bars are within each London Borough."
+    "2 Local venue information for each London Borough is captured using the Foursquare API. "
    ]
   },
   {
@@ -86,7 +82,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1 The house price data will contains over 20 years of historical data that is not required for this analysis. I will exclude that along with non-London counties. Latitude and Longtiude data will need to be added using the Geopy library.\n",
+    "\n",
+    "2 Venue data from Foursquare is received in JSON format which will need to be flattened."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,7 +98,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The venue categorisations captured through the Foursquare API (2) will be used as a feature set. This resulted in a feature set of 440."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,8 +120,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. \n",
-    "\n"
+    "One consideration\n",
+    "\n",
+    "Linear regression"
    ]
   },
   {
@@ -158,7 +161,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on findings"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,7 +182,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A better dataset would contain unsummarised data including individual house sales and location data. but I was unable to source this."
+   ]
   }
  ],
  "metadata": {
@@ -196,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
