--- a/Capstone Project Report.ipynb
+++ b/Capstone Project Report.ipynb
@@ -64,27 +64,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\james\\anaconda3\\lib\\site-packages (0.24.2)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in c:\\users\\james\\anaconda3\\lib\\site-packages (from pandas) (1.16.2)\n",
-      "Requirement already satisfied: pytz>=2011k in c:\\users\\james\\anaconda3\\lib\\site-packages (from pandas) (2018.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in c:\\users\\james\\anaconda3\\lib\\site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\james\\anaconda3\\lib\\site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [
@@ -105,6 +84,8 @@
     }
    ],
    "source": [
+    "#Install libraries\n",
+    "#!pip install pandas\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests # library to handle requests\n",
@@ -937,7 +918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's determine which venue has the most significant impact on hourse prices. We can do this using a multivariate linear regression algorithm. I will split the dataset so we can later test the accuracy of the model."
+    "Now let's determine which venue has the most significant impact on house prices. We can do this using a multivariate linear regression algorithm. I will split the dataset so we can later test the accuracy of the model."
    ]
   },
   {
@@ -3658,7 +3639,7 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_rows', 100)\n",
     "df_coef"
    ]
   },
@@ -3973,11 +3954,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The bar graph shows how well the model predicted the house prices for the 9 London Boroughs from the test set. While the model performed admirably there were large descrepencies for 2 London Boroughs, Havering and Lambeth."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3990,9 +3971,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results gave interesting insight into the varying impacts of the different venue types. Pubs had the most detrimental impact, reducing the expected house value by £14k. As predicted in the introduction, Night Clubs contributed to an adverse house price but was only the 6th worse venue type.\n",
-    "\n",
-    "Correlation and Causation"
+    "The results gave valuable insight into the varying impacts of the different venue types on house prices. Pubs had the most detrimental impact, reducing the expected house value by £14k. As predicted in the introduction, Night Clubs contributed to an adverse house price but was only the 6th worse venue type. While on the other end of the spectrum, Spa had an incredible positive impact adding £29k to the house price in the model. One important point, is that while a nearby Spa may add value to nearby house prices, the more likely scenario is that the Spa owners positioned themselves in wealthy areas. "
    ]
   },
   {
@@ -4008,9 +3987,9 @@
    "source": [
     "The purpose of the project was to identify how nearby venues impact the house prices in London. While I have produced this information there are many considerations to be taken into account before relying on this data. The analysis on the test data showed that while model provided a good estimation, there was plenty of room for improvement.\n",
     "\n",
-    "First and foremost there are other variables outside nearby venues that influence house prices. For example, crime, the quality of schools and transport, employment, house income etc.\n",
+    "First and foremost there are other variables outside nearby venues that influence house prices. For example, employment rates, house income, crime rates, the quality of schools and transport etc. So there will always be some limitations with only using nearby venue data as a model.\n",
     "\n",
-    "Quality/Quantity of the data\n"
+    "Secondly, due to limitiations with the Geopy library, I used summarised house price data rather than individual house sales. I suspect the unsummarised data would improve the model as the location and venue data will be more accurate. \n"
    ]
   }
  ],
